# salary-management-kata

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-api-docs.yml  publish-docker-image.yml
data/: README.md
docs/: DECISION_LOG.md  DOMAIN_RULES.md  IMPLEMENTATION_PROTOCOL.md  README.md  TEST_MATRIX.md  index.html  openapi.json
docs/CHANGE_REQUESTS/: change-request-2-lkjl.md  change-request-3-kiok.md
images/: README.md
legal/: MIT_LICENSE.md  THIRD_PARTY_NOTICES.md
logs/: README.md
rulechain/: CHANGE_IMPACT.md  DECISION_LOG.md  IMPLEMENTATION_PROTOCOL.md  OPEN_QUESTIONS.md  README.md
rulechain/CHANGE_REQUESTS/: change-request-2-lkjl.md  change-request-3-kiok.md  change-request-5-lorem-ipsum.md
salary_api/: database.py  export_openapi.py  main.py  models.py  schemas.py  services.py  settings.py
salary_api/ui/: app.js  index.html  styles.css
scripts/: export_openapi.py
tests/: conftest.py  test_change_requests.py  test_employee_crud.py  test_salary_calculation.py  test_salary_metrics.py
