[tool.poetry]
name = "salary-management-kata"
version = "0.1.0"
description = "Salary Management API kata implemented with FastAPI"
authors = ["Sachin <schnaror@gmail.com>"]
readme = "README.md"
packages = [{ include = "salary_api" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.121.3"
uvicorn = { extras = ["standard"], version = "0.35.0" }
sqlalchemy = "2.0.38"
pydantic = "2.11.7"
pydantic-settings = "2.11.0"
python-dotenv = "1.1.1"
starlette = "0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
